k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dashboard-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          #Replace by your registry
          image: josecarlosjr/app-cla-backend:sha-f26a499
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dashboard-app
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
