k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dashboard-app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          #Replace by your registry
          image: josecarlosjr/app-cla-frontend:sha-f26a499
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: dashboard-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
